// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test disabling of a Tab 1`] = `
<Tab
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  href={
    Object {
      "selectHandler": [MockFunction],
    }
  }
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Tab"
  onClick={[Function]}
  onClose={[Function]}
  orientation="top"
  padding={null}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="tab title"
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test making a Tab invisible 1`] = `
<Tab
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  href={
    Object {
      "selectHandler": [Function],
    }
  }
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Tab"
  onClick={[Function]}
  onClose={[Function]}
  orientation="top"
  padding={null}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="tab title"
  tooltip={null}
  top={null}
  visible={false}
  width={null}
  xcss={null}
/>
`;

exports[`Test retrieval of Tab props object 1`] = `
Object {
  "bottom": null,
  "children": null,
  "className": null,
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "focus": false,
  "height": null,
  "href": Object {
    "selectHandler": [Function],
  },
  "id": null,
  "left": null,
  "location": "none",
  "minHeight": null,
  "minWidth": null,
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "notheme": false,
  "notooltip": false,
  "obj": "Tab",
  "onClick": [Function],
  "onClose": [Function],
  "orientation": "top",
  "padding": null,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": null,
  "title": "",
  "tooltip": null,
  "top": null,
  "visible": true,
  "width": null,
  "xcss": null,
}
`;

exports[`Test the click handler in the Tab instance 1`] = `
<Tab
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  href={
    Object {
      "selectHandler": [MockFunction],
    }
  }
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Tab"
  onClick={[Function]}
  onClose={[Function]}
  orientation="top"
  padding={null}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="tab title"
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test the close click handler on a Tab instance 1`] = `
<Tab
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  href={
    Object {
      "hiddenTabHandler": [MockFunction],
    }
  }
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Tab"
  onClick={[Function]}
  onClose={[MockFunction]}
  orientation="top"
  padding={null}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="tab title"
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test the creation of a Tab instance 1`] = `
<Wrapper
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  href={
    Object {
      "selectHandler": [Function],
    }
  }
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Tab"
  onClick={[Function]}
  onClose={[Function]}
  onError={[Function]}
  orientation="top"
  padding={null}
  reset={false}
  selected={true}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="tab title"
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Tab__TabView
    className="ui-tab ui-selected"
    disabled={false}
    selected={true}
    sizing="normal"
    style={
      Object {
        "minWidth": "120px",
        "width": null,
      }
    }
    visible={true}
    xcss={
      Array [
        "border-right:solid 1px ",
        [Function],
        ";border-top:solid 1px ",
        [Function],
        ";&:first-child{border-left:solid 1px ",
        [Function],
        ";}",
      ]
    }
  >
    <Item
      bottom={null}
      className={null}
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      hiddenLeftButton={false}
      hiddenRightButton={true}
      href={
        Object {
          "selectHandler": [Function],
        }
      }
      id={null}
      layout={5}
      left={null}
      leftButton={null}
      location="none"
      minHeight={null}
      minWidth={null}
      noedit={false}
      nohover={false}
      noripple={false}
      notheme={false}
      notooltip={false}
      obj="Tab"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onClose={[Function]}
      onDoubleClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onMouseOut={[Function]}
      onUpdate={[Function]}
      orientation="top"
      padding={null}
      rightButton={
        <Button
          bottom={null}
          className={null}
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage={null}
          focus={false}
          height={null}
          href={
            Object {
              "selectHandler": [Function],
            }
          }
          iconName="times"
          iconStyle=""
          id={null}
          left={null}
          location="none"
          minHeight={null}
          minWidth={null}
          noedit={false}
          nohover={false}
          noripple={false}
          notheme={false}
          notooltip={false}
          obj="Tab"
          onClick={[Function]}
          onClose={[Function]}
          orientation="top"
          padding={null}
          selected={true}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          title="tab title"
          tooltip={null}
          top={null}
          visible={true}
          width={null}
          xcss={null}
        >
          Test content
        </Button>
      }
      selected={true}
      sizing="normal"
      stacked={false}
      style={Object {}}
      testing={true}
      theme={null}
      title="tab title"
      tooltip={null}
      top={null}
      useedit={false}
      visible={true}
      widget={null}
      width={null}
      xcss={null}
    >
      Test content
    </Item>
  </Tab__TabView>
</Wrapper>
`;
